--- a/expenseTracker/src/main/resources/application.properties
+++ b/expenseTracker/src/main/resources/application.properties
@@ -30,3 +30,6 @@ spring.servlet.multipart.maxFileSize=20MB
 spring.servlet.multipart.maxRequestSize=100MB
 
 spring.jpa.properties.hibernate.default_batch_fetch_size=1000
+
+# ?? ?? ?? ?? (? ??)
+server.servlet.session.timeout=1800
