--- a/expenseTracker/src/main/resources/application.properties
+++ b/expenseTracker/src/main/resources/application.properties
@@ -33,3 +33,8 @@ spring.jpa.properties.hibernate.default_batch_fetch_size=1000
 
 # ?? ?? ?? ?? (? ??)
 server.servlet.session.timeout=1800
+
+mail.host=smtp.naver.com
+mail.port=587
+mail.username=lilydodo123@naver.com
+mail.password=HEK8KSXYD8ET
